Add tension diagnostic cards

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -175,7 +175,8 @@ main {
 }
 
 aside,
-.stats-container {
+.stats-container,
+.diagnostic-list {
   background-color: var(--item-background);
   padding: 20px;
   border-radius: 16px;
@@ -300,4 +301,51 @@ button {
 .legend-details > :first-child {
   border-bottom: 2px solid #c6c8ca;
   padding-bottom: 20px;
+}
+
+/* tesntion stats */
+.tension-item {
+  background-color: #e0f3fa;
+  min-width: 14rem;
+  height: 15rem;
+  border-radius: 12px;
+
+  h5 {
+    font-size: 1rem;
+    font-weight: normal;
+  }
+
+  p {
+    font-size: 1.56rem;
+    font-weight: bolder;
+  }
+
+  .status {
+    font-size: 0.875rem;
+    font-weight: lighter;
+  }
+}
+
+.lattar {
+  width: 6rem;
+}
+
+/* diagnostic list  */
+.diagnostic-list {
+  thead {
+    th {
+      background-color: #f6f7f8;
+      padding: 0.5rem 1rem;
+    }
+
+    th:first-child {
+      border-top-left-radius: 24px;
+      border-bottom-left-radius: 24px;
+    }
+
+    th:last-child {
+      border-top-right-radius: 24px;
+      border-bottom-right-radius: 24px;
+    }
+  }
 }
